# employee-bot

./: .env  .gitignore  Procfile  README.md  bot.py  config.py  database.py  db_setup py  gitignore  init_db.py  main.py  pyproject.toml  render yaml  render.yaml  render_build.sh  replit.md  requirements.txt  run.py  schema.sql  setup_database.py
employee_management_bot/: bot.py  db.py
