[tool.poetry]
name = "employee-management-bot"
version = "0.1.0"
description = "Telegram bot for managing employee attendance"
authors = ["your_name <your_email>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.1"
psycopg2 = "^2.9.3"
psycopg2-binary = "^2.9.3"
pytz = "^2021.1"

[tool.poetry.packages]
# تأكد من أن الحزم معرفة بشكل صحيح كمصفوفة
[[tool.poetry.packages]]
include = "employee_management_bot"
from = "."