[tool.poetry]
name = "employee-bot" # **استخدم اسم حزمتك الفعلي هنا**
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"] # يمكن إضافته
readme = "README.md" # يمكن إضافته
packages = [
    {include = "employee_management_bot"} # **أضف هذا السطر** - استبدل بالاسم الفعلي لمجلد الكود المصدري
]

[tool.poetry.dependencies]
python = "^3.11" # استخدم صيغة Poetry لتحديد إصدار بايثون (>=3.11)
flask = "^3.1.2"
psycopg2-binary = "^2.9.11"
python-telegram-bot = {extras = ["job-queue"], version = "^22.5"} # صيغة Poetry لتحديد extras

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
